--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    return {x_values['x']:, }"
+    "    return {x_values['x']:, y_values['']}"
    ]
   },
   {
