--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = list(map(lambda m*x+b))\n",
+    "    y_values = list(map(lambda m*x_values+b, x_))\n",
     "    return {x_values['x'], y_values['y']}"
    ]
   },
