Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,12 +275,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = list(map(lambda x m*x_values+b, x_))\n",
+    "    y_values = list(map(lambda x: m*x_values+b, x_values))\n",
     "    return {x_values['x'], y_values['y']}"
    ]
   },
