--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y_values = list(map(lambda x: m*x_values+b, x_values))\n",
-    "    return {x_values['x'], y_values['y']}"
+    "    return {'x':x_val, y_values['y']}"
    ]
   },
   {
