--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = list(map(lambda x: m*x_values+b, x_values))\n",
+    "    y_values = list(map(lambda x: m*+b, x_values))\n",
     "    return {'x':x_values, 'y':y_values}\n",
     "def m_b_data(m, b, x_values):\n",
     "    y_values = list(map(lambda x: m*x + b, x_values))\n",
