--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    values = m_b_data(m, b , x_values)\n",
-    "    return {'x':x_values, 'y':values, mode:'mode', name:'name'}"
+    "    values.update({'mode': mode, 'name': name})\n",
+    "        "
    ]
   },
   {
