--- a/index.ipynb
+++ b/index.ipynb
@@ -313,14 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    values = m_b_data(m, b , x_values)\n",
     "    values.update({'mode': mode, 'name': name})\n",
-    "        "
+    "    return values    "
    ]
   },
   {
