--- a/index.ipynb
+++ b/index.ipynb
@@ -325,19 +325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'x': [0, 50, 100],\n",
-       " 'y': {'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]},\n",
-       " 'lines': 'mode',\n",
-       " 'line function': 'name'}"
+       " 'y': [20.0, 95.0, 170.0],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'line function'}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
