--- a/index.ipynb
+++ b/index.ipynb
@@ -399,12 +399,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-39-6179a7bdd639>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-6179a7bdd639>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return float((second_show['attendance']-first_show['attendance']/)(second_show['budget']-first_show['budget]))\u001b[0m\n\u001b[0m                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return float((second_show['attendance']-first_show['attendance']/)(second_show['budget']-first_show[budget'']))"
+    "    return float((second_show['attendance']-first_show['attendance']/)(second_show['budget']-first_show['budget]))"
    ]
   },
   {
