--- a/index.ipynb
+++ b/index.ipynb
@@ -399,37 +399,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-40-fd30073b1662>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-fd30073b1662>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return float((second_show['attendance']-first_show['attendance'])/(second_show['budget']-first_show['budget]))\u001b[0m\n\u001b[0m                                                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return float((second_show['attendance']-first_show['attendance'])/(second_show['budget']-first_show['budget]))"
+    "    return float((second_show['attendance']-first_show['attendance'])/(second_show['budget']-first_show['budget']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marginal_return_on_budget(first_show, second_show) # 1.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'budget': 200, 'attendance': 400}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_show"
    ]
