--- a/index.ipynb
+++ b/index.ipynb
@@ -570,7 +570,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    sorted_points(xalues)"
+    "    sorted_points(x_values, yvalues)"
    ]
   },
   {
