--- a/index.ipynb
+++ b/index.ipynb
@@ -570,8 +570,8 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    x1=sorted_values\n",
-    "    sorted_points(x_values, y_values)"
+    "    x1=sorted_values[0][0]\n",
+    "    "
    ]
   },
   {
