Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -570,6 +570,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
+    "    sorted\n",
     "    x1=sorted_values[0][0]\n",
     "    "
    ]
