Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -570,8 +570,8 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    sorted\n",
-    "    x1=sorted_values[0][0]\n",
+    "    sorted_values = \n",
+    "    x1 = sorted_values[0][0]\n",
     "    "
    ]
   },
