--- a/index.ipynb
+++ b/index.ipynb
@@ -570,7 +570,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    sorted_values = \n",
+    "    sorted_values = sorted_points()\n",
     "    x1 = sorted_values[0][0]\n",
     "    "
    ]
