--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,7 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    return y_values-m*x_values "
+    "    return y_values-*x_values "
    ]
   },
   {
