--- a/index.ipynb
+++ b/index.ipynb
@@ -609,12 +609,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    return y_values-slope*x_values "
+    "    return y_values - (slope*x_values "
    ]
   },
   {
